@@ -2,6 +2,7 @@ package com.tournamentmanagmentsystem.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.stereotype.Service;
@@ -9,10 +10,8 @@ import org.springframework.stereotype.Service;
 import com.tournamentmanagmentsystem.entity.StandingsEntity;
 import com.tournamentmanagmentsystem.repository.StandingsRepository;
 
-import lombok.RequiredArgsConstructor;
 
 @Service
-@RequiredArgsConstructor
 public class StandingsService {
 
     private StandingsRepository standingsRepository;
@@ -55,7 +54,8 @@ public class StandingsService {
      * @return a List of all {@link StandingsEntity} in the repository.
      */
     public List<StandingsEntity> findAll () {
-        return StreamSupport.stream(this.standingsRepository.findAll().spliterator(), false).toList();
+        return StreamSupport.stream(this.standingsRepository.findAll().spliterator(), false)
+                            .collect(Collectors.toList());
     }
 
     /**
