@@ -3,6 +3,7 @@ package com.tournamentmanagmentsystem.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.stereotype.Service;
@@ -10,11 +11,8 @@ import org.springframework.stereotype.Service;
 import com.tournamentmanagmentsystem.entity.TournamentEntity;
 import com.tournamentmanagmentsystem.repository.TournamentRepository;
 
-import lombok.RequiredArgsConstructor;
-
 
 @Service
-@RequiredArgsConstructor
 public class TournamentService {
 
     private TournamentRepository tournamentRepository;
@@ -57,7 +55,8 @@ public class TournamentService {
      * @return a List of all {@link TournamentEntity} in the repository.
      */
     public List<TournamentEntity> findAll () {
-        return StreamSupport.stream(this.tournamentRepository.findAll().spliterator(), false).toList();
+        return StreamSupport.stream(this.tournamentRepository.findAll().spliterator(), false)
+                            .collect(Collectors.toList());
     }
 
     /**
